Fix feature panel content alignment

--- a/hsreplaynet/static/styles/home_new.scss
+++ b/hsreplaynet/static/styles/home_new.scss
@@ -235,7 +235,7 @@
 			border: 1px solid $blue;
 			border-radius: 3px;
 			height: 100%;
-			padding-top: calc(1.2em + 28px);
+			padding-top: calc(1.2em + 30px);
 			background: $spacegray;
 			overflow: hidden;
 
